-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9
-
None
-
-
357c64a99 (dev), f329dd4e1 (6.9), a11752551 (dev), 8a7ee8d52 (6.9), 70c61b12e (dev), 019feea9b (6.9)
contextMenuEvent no longer triggers after commit 84a5f50c7766c99f62b22bb4388137e0aa8dd13d (https://codereview.qt-project.org/c/qt/qtbase/+/603535)
To reproduce right click in a QLineEdit. See attached example.
contextMenuEvent seems to be broke in all widgets.
- relates to
-
QTBUG-136241 wasm: standardContextMenu is not shown
-
- Closed
-
- resulted from
-
QTBUG-93486 Clean up delivery logic of QContextMenuEvent
-
- Reported
-
| For Gerrit Dashboard: QTBUG-132066 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 610214,3 | WIP add tst_QScrollBar::contextMenu() | dev | qt/qtbase | Status: NEW | -2 | 0 |
| 645742,3 | doc: Explain that QContextMenuEvent occurs if prior event ignored | dev | qt/qtbase | Status: NEW | -1 | 0 |
| 610166,6 | Widgets: ignore unhandled right mouse button presses | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 610215,5 | QWidgetWindow: send QContextMenuEvent even after accepted mouse press | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 610615,2 | QWidgetWindow: send QContextMenuEvent even after accepted mouse press | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 610719,2 | Widgets: ignore unhandled right mouse button presses | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 610864,4 | Always send QContextMenuEvent after the contextMenuEventType event | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 612751,2 | Always send QContextMenuEvent after the contextMenuEventType event | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |